# xivtools

bindings/: build.rs
gui-support/src/: lib.rs
process/: Cargo.toml
process/src/: lib.rs
talan/src/: config.rs  craft.rs  gui.rs  macros.rs  recipe.rs  rpc.rs  task.rs
ventures/src/: main.rs
xiv/: Cargo.toml
xiv/src/: lib.rs  ui.rs
xivapi/src/: lib.rs
